bpk-lib/crates/macbat/macros/tests/trybuild_negative/operation_non_rust_abi.stderr
error: non-Rust ABI operation
  --> tests/trybuild_negative/operation_non_rust_abi.rs:10:1
   |
10 | extern "C" fn f(input: &[u8], cx: &mut u8) -> u8 {
   | ^^^^^^
